force-app/main/default/objects/InboundAppPayment__e.object
<CustomObject>
    <description>Application payment updates received from external systems e.g. Western Union

Team: My.App
Contact: Maz</description>
    <fields>
        <fullName>CRM_Reference__c</fullName>
        <description>Reference Id for the CRM record</description>
        <label>CRM Reference</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Applicant Email Reference</description>
        <label>Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Reference__c</fullName>
        <description>Source Reference, File Name,</description>
        <label>Event Reference</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <description>Applicant First Name</description>
        <label>First Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <description>Applicant Last Name</description>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payer_Name__c</fullName>
        <description>The person who is a reference for this payment</description>
        <label>Payer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>Applicant Phone Reference</description>
        <label>Phone</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Amount__c</fullName>
        <description>Amount we charged</description>
        <label>Service Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Settlement_Amount__c</fullName>
        <description>Settlement Amount on the transaction</description>
        <label>Settlement Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transaction_Id__c</fullName>
        <description>Unique Transaction Id</description>
        <label>Transaction Id</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Source__c</fullName>
        <description>Data source for Transaction</description>
        <label>Transaction Source</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <description>E.g. Bank Transfer, Wire, Amex, Visa etc.</description>
        <label>Transaction Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Inbound App Payment</label>
    <pluralLabel>Inbound App Payments</pluralLabel>
</CustomObject>